# skyblock-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  start.bat  start.ps1  sync-icons.bat  sync-icons.ps1  sync-items.bat  sync-items.ps1  sync-tooltips.bat  sync-tooltips.ps1
docs/planned/: rng-drop-tool.md
scripts/: diagnose_gui.py  ensure_env.py
src/skyblock_agent/: __main__.py  cli.py  config.py  serializers.py
src/skyblock_agent/collectors/: collections_importer.py  hypixel_client.py  icon_client.py  icons_importer.py  items_importer.py  market_collector.py  mojang_client.py  neu_importer.py  player_lookup.py  profile_collector.py  resource_client.py  tooltips_importer.py  wiki_client.py
src/skyblock_agent/models/: dungeons.py  inventory.py  items.py  market.py  members.py  profile.py
src/skyblock_agent/parsers/: collection_categories.py  dungeon_leveling.py  hypixel_tooltip.py  inventory_pages.py  item_minetip.py  member_collections.py  member_dungeons.py  member_inventories.py  nbt_inventory.py  (+1 more)
tests/: test_api_recognition.py  test_collections_index.py  test_dungeons.py  test_ensure_env.py  test_hypixel_tooltip.py  test_icon_client.py  test_icons_import.py  test_inventory_pages.py  test_item_minetip.py  test_items_import.py  test_market.py  test_mojang_client.py  test_nbt_inventory.py  test_player_lookup.py  test_profile.py  test_tooltips_index.py  test_vanilla_icons.py  test_wiki_tooltips.py
tests/fixtures/: items_sample.json  profile_api_hidden.json  profile_v2_dashed_uuid.json  profile_v2_sample.json  wiki_tooltips_sample.lua
(+22 files in other folders)
