[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skyblock-agent"
version = "0.1.0"
description = "Hypixel SkyBlock info collector and assistant"
readme = "README.md"
requires-python = ">=3.9"
license = "LGPL-3.0-or-later"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
skyblock-agent = "skyblock_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
