[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skyblock-agent"
version = "0.1.0"
description = "Hypixel SkyBlock info collector and assistant"
readme = "README.md"
requires-python = ">=3.9"
license = "LGPL-3.0-or-later"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "nbtlib>=2.0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
gui = ["fastapi>=0.115.0", "uvicorn[standard]>=0.32.0"]

[tool.setuptools.package-data]
"skyblock_agent.web" = ["static/*"]

[project.scripts]
skyblock-agent = "skyblock_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
